--- a/updates/index.html
+++ b/updates/index.html
@@ -1,4 +1,17 @@
 {
   versionName: "1.0 alpha",
-  versionCode: 2
+  versionCode: 2,
+  versionDescription: "New:
++ Playlist page: enjoy music from your playlist in your app
+
+Improvements:
+* Loading status on pages
+* Now music stop playing when headphones turned off
+* Now you can control playback with controls on your headphone
+* Now you can choose order of your local songs: first new or first old
+
+Fixes:
+* Fixed bug with app crashing on non-escaped symbols in login/password
+* Run-time ask for access to read/write data from sd (for Android 6.0+)
+"
 }
